# cosmoloj-cpp

./: .gitignore  .gitlab-ci.yml  README.md  sonar-project.properties
.github/workflows/: build.yml
learning/: .gitlab-ci.yml  CMakeLists.txt
learning-ri/: .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh
learning-ri/demo/: array-demo.cc  polymorphism-demo.cc  unit-simple-ri-demo.cc
learning-ri/include/: polymorphismRI.hh  unitSimpleRI.hh
learning-ri/src/: factor.cc  polymorphism.cc  stats.cc  unit.cc  unitConverter.cc
learning-ri/test/: boost-math-distribution-test.cc  parameterized-test.cc  polymorphism-test.cc  test.cc  unit-operators-test.cc  unit-test.cc
learning/include/: polymorphism.hh  stats.hh  unitSimple.hh
unit-simple/: .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh
unit-simple-ri/: .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  build_dev.sh
unit-simple-ri/demo/: unit-simple-ri-demo.cc
unit-simple-ri/include/: unitSimpleRI.hh
unit-simple-ri/src/: factor.cc  unit.cc  unitConverter.cc
unit-simple-ri/test/: test.cc  unit-operators-test.cc  unit-test.cc
unit-simple/include/: unit.hh  unitSimple.hh  unitSimpleRI.hh
unit-simple/src/: cosmoloj-cpp-test.cc  factor.cc  unit.cc  unitConverter.cc
unit-simple/test/: test.cc  unit-test.cc
